; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_vm_machdep.c_cpu_procctl_kpti.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/amd64/extr_vm_machdep.c_cpu_procctl_kpti.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i64 }

@PROC_KPTI_CTL = common dso_local global i32 0, align 4
@pti = common dso_local global i64 0, align 8
@PROC_KPTI_CTL_ENABLE_ON_EXEC = common dso_local global i32 0, align 4
@P_MD_KPTI = common dso_local global i32 0, align 4
@PROC_KPTI_CTL_DISABLE_ON_EXEC = common dso_local global i32 0, align 4
@PMAP_NO_CR3 = common dso_local global i64 0, align 8
@PROC_KPTI_STATUS_ACTIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.proc*, i32, i32*)* @cpu_procctl_kpti to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cpu_procctl_kpti(%struct.proc* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.proc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.proc* %0, %struct.proc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @PROC_KPTI_CTL, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %39

10:                                               ; preds = %3
  %11 = load i64, i64* @pti, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %25

13:                                               ; preds = %10
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @PROC_KPTI_CTL_ENABLE_ON_EXEC, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %13
  %19 = load i32, i32* @P_MD_KPTI, align 4
  %20 = load %struct.proc*, %struct.proc** %4, align 8
  %21 = getelementptr inbounds %struct.proc, %struct.proc* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %23, %19
  store i32 %24, i32* %22, align 4
  br label %25

25:                                               ; preds = %18, %13, %10
  %26 = load i32*, i32** %6, align 8
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @PROC_KPTI_CTL_DISABLE_ON_EXEC, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %38

30:                                               ; preds = %25
  %31 = load i32, i32* @P_MD_KPTI, align 4
  %32 = xor i32 %31, -1
  %33 = load %struct.proc*, %struct.proc** %4, align 8
  %34 = getelementptr inbounds %struct.proc, %struct.proc* %33, i32 0, i32 1
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = and i32 %36, %32
  store i32 %37, i32* %35, align 4
  br label %38

38:                                               ; preds = %30, %25
  br label %68

39:                                               ; preds = %3
  %40 = load %struct.proc*, %struct.proc** %4, align 8
  %41 = getelementptr inbounds %struct.proc, %struct.proc* %40, i32 0, i32 1
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* @P_MD_KPTI, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %39
  %48 = load i32, i32* @PROC_KPTI_CTL_ENABLE_ON_EXEC, align 4
  br label %51

49:                                               ; preds = %39
  %50 = load i32, i32* @PROC_KPTI_CTL_DISABLE_ON_EXEC, align 4
  br label %51

51:                                               ; preds = %49, %47
  %52 = phi i32 [ %48, %47 ], [ %50, %49 ]
  %53 = load i32*, i32** %6, align 8
  store i32 %52, i32* %53, align 4
  %54 = load %struct.proc*, %struct.proc** %4, align 8
  %55 = getelementptr inbounds %struct.proc, %struct.proc* %54, i32 0, i32 0
  %56 = load i32, i32* %55, align 4
  %57 = call %struct.TYPE_4__* @vmspace_pmap(i32 %56)
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %57, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = load i64, i64* @PMAP_NO_CR3, align 8
  %61 = icmp ne i64 %59, %60
  br i1 %61, label %62, label %67

62:                                               ; preds = %51
  %63 = load i32, i32* @PROC_KPTI_STATUS_ACTIVE, align 4
  %64 = load i32*, i32** %6, align 8
  %65 = load i32, i32* %64, align 4
  %66 = or i32 %65, %63
  store i32 %66, i32* %64, align 4
  br label %67

67:                                               ; preds = %62, %51
  br label %68

68:                                               ; preds = %67, %38
  ret void
}

declare dso_local %struct.TYPE_4__* @vmspace_pmap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
